--- a/tex/bib.tex
+++ b/tex/bib.tex
@@ -56,6 +56,19 @@
   METAPOD - Template M...
   M. Naveau, J. Carpentier, S. Barthelemy, O. Stasse et P. Soueres
   
+\bibitem{bib_backdrive}
+  Balancing a Humanoid Robot Using Backdrive Concerned Torque control and Direct Angular Momentum Feedback
+  
+\bibitem{bib_backdrive}
+  Shuuji Kajita, Kazuhito Yokoi.
+  \emph{Balancing a Humanoid Robot Using Backdrive Concerned Torque Control and Direct Angular Momentum Feedback}.
+  International Conference on Robotics and Automation.
+  2001
+
+\bibitem{bib_paper_Andrea}
+
+\bibitem{bib_these_andrea}
+
 % => OK
 
 \bibitem{bib_ros}
