--- a/tex/glossaire.tex
+++ b/tex/glossaire.tex
@@ -10,6 +10,7 @@
 \newacronym{acr_algoDFS}{DFS}{Deep First Search}
 \newacronym{acr_cop}{CoP}{centre de pression}
 \newacronym{acr_com}{CoM}{centre de masse}
+\newacronym{acr_wpg}{WPG}{Générateur De Marche ou "Walking Pattern Generator"}
 
 %% définitions
 
